quorum/test/tests/TypeChecker/Pass/ImpAssignTextText.quorum
text t = "t"
print t