quorum/test/tests/TypeChecker/Fail/ImpAssignTextInteger.quorum
integer i = 5
text t = i